# SLURM_RAY

./: .gitignore  README.md  RayLauncher.py  check_desi_state.py  debug_desi_fs.py  debug_scope.py  debug_source.py  install.sh  old_spython_template.py  pyproject.toml  requirements.txt  sbatch_template.sh  spython_template.py  test_cpu.py  test_gpu.py  test_hello_world.py
.agent/rules/: README.md  communication.md  documentation.md
.agent/workflows/: agent.md  architect.md  architecte.md  context.md  enqueteur.md  handover.md  janitor.md  monitor_long_run.md  prompt.md  rule.md  task.md
.cursor/agents/: ameliorer-gestion-env-credentials.md  consolider-transfert-source-python.md  corriger-et-rediriger-dashboard-ray.md  corriger-incompatibilites-curnagl.md  creer-interface-interactive-gestion-jobs-slurm.md  creer-tests-hello-world-cpu-gpu.md  gerer-annulation-jobs-interruption-locale.md  implementation-backend-desi.md  implementer-point-entree-python-m-slurmray.md  implementer-systeme-logging-fichier.md  installer-et-verifier-projet.md  integrer-ouverture-automatique-dashboard-ray.md  mettre-a-jour-documentation-repo.md  optimiser-gestion-stockage-nettoyage.md  plan-cli.md  plan-gerer-annulation-jobs.md  plan-simplifier-queue.md  rapport-consolidation-transfert-source.md  rapport-corriger-incompatibilites-curnagl.md  roadmap.yaml  (+21 more)
assets/: sbatch_template.sh  spython_template.py
documentation/: Cluster.html  Cluster.md  RayLauncher.html  RayLauncher.md  curnagl.html  daisy.html  desi.html  index.html  kernigol.html
scripts/: check_desi_locks.py  check_desi_resources.py  cleanup_desi_projects.py  diagnose_desi.py  diagnose_desi_312.py  diagnose_desi_permissions.py  diagnose_ray_segfault.py  diagnose_uv.py  reset_desi_python.py
slurmray/: RayLauncher.py  __init__.py  __main__.py  cli.py  file_sync.py  scanner.py  utils.py
src/: RayLauncher.py
tests/: check_desi_driver.py  manual_test_desi_gpu_dashboard.py  manual_test_interruption.py  manual_test_queue.py  manual_test_source_serialization_limits.py  reproduce_async.py  reproduce_filescope.py  reproduce_is_package_local_v6_0_4.py  reproduce_issue.py  setup_desi_env.py  test_async_desi.py  test_auto_detection.py  test_curnagl_gpu_dashboard.py  test_deep_imports.py  test_desi_complete_suite.py  test_desi_gpu_dashboard.py  test_desi_manual.py  test_desi_wrapper_generation.py  test_failfast_installation_error.py  test_gpu_dashboard_long.py  test_hello_world_cpu.py  test_hello_world_gpu.py  test_local_complete_suite.py  test_local_project_exclusion.py  test_local_refactor.py  test_multiprocessing_patch.py  test_path_detection.py  test_raylauncher_example_complete.py  test_relative_imports.py  test_requirements_generation.py  test_scanner_and_detection.py  test_sftp_reuse.py  test_source_transfer.py  verify_cancel.py  verify_concurrent_launch.py  verify_desi_feedback.py  verify_desi_parallelism_real.py  verify_error_visibility.py  verify_force_reinstall.py  verify_gpu_sync.py
(+32 files in other folders)
