[tool.poetry]
name = "slurmray"
version = "6.0.1"
description = "SlurmRay is an official tool from DESI @ HEC UNIL for effortlessly distributing tasks on Slurm clusters (e.g., Curnagl) or standalone servers (e.g., ISIPOL09/Desi) using the Ray library."
authors = ["Henri Jamet <henri.jamet@unil.ch>"]
license = "Apache License"
homepage = "https://henri-jamet.vercel.app/"
documentation = "https://henri-jamet.vercel.app/cards/documentation/slurm-ray/slurm-ray/"
readme = "README.md"
keywords = ["ray", "slurm", "distributed-computing", "hpc", "desi", "hec-unil"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dill = "^0.3.7"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.7.1"}
pdoc3 = "^0.10.0"
paramiko = "^3.3.1"
pip-chill = "^1.0.3"
python-dotenv = "^1.0.0"
setuptools = "^80.9.0"
rich = "^14.2.0"
inquirer = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^8.0.0"
requests = "^2.32.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.poetry.scripts]
slurmray = "slurmray.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
